tests/ui/try_transmute-src-not-intobytes.msrv.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: IntoBytes` is not satisfied
   --> $DIR/try_transmute-src-not-intobytes.rs:16:47
    |
16  |     let src_not_into_bytes: Result<AU16, _> = try_transmute!(NotZerocopy(AU16(0)));
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `NotZerocopy<AU16>`
    |
note: required by a bound in `try_transmute`
   --> $WORKSPACE/src/util/macro_util.rs:512:10
    |
512 |     Src: IntoBytes,
    |          ^^^^^^^^^ required by this bound in `try_transmute`
    = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
